# Xtrieve

./: .gitignore  CLAUDE.md  Cargo.toml  DOS-BRIDGE.md  LICENSE  README.md
docs/: ERRORS.md  FRIENDSHIP.md  OPERATIONS.md  PROTOCOL.md  STORY.md
docs/bridge/: PROTOCOL.md  README.md  TECHNICAL.md
dos-client/: BTRSERL.C  README.md
proto/: xtrieve.proto
sdks/c/: Makefile  README.md  example.c  xtrieve.c  xtrieve.h
sdks/go/: README.md  go.mod  xtrieve.go
sdks/go/example/: main.go
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/javascript/src/: index.ts
sdks/php/: README.md  composer.json
sdks/php/src/: XtrieveClient.php
serial-bridge/: Cargo.toml
serial-bridge/src/: main.rs
windows-bridge/: MAKEFILE  README.TXT  XTRIEVE.C  XTRIEVE.DPR  XTRIEVE.INI
xtrieve-client/: Cargo.toml  build.rs
xtrieve-client/examples/: create_and_insert.rs  debug_insert.rs  read_btrieve.rs  read_btrieve_file.rs  test_all_operations.rs  test_connection.rs  test_isolation.rs  test_key_operations.rs  weather_telemetry.rs  weather_web.rs
xtrieve-client/src/: btrieve.rs  client.rs  lib.rs
xtrieve-engine/: Cargo.toml
xtrieve-engine/examples/: debug_engine.rs  debug_index.rs
xtrieve-engine/src/: error.rs  lib.rs  protocol.rs
xtrieve-engine/src/file_manager/: cursor.rs  locking.rs  mod.rs  open_files.rs  page_cache.rs
xtrieve-engine/src/operations/: dispatcher.rs  file_ops.rs  key_ops.rs  mod.rs  position_ops.rs  record_ops.rs  step_ops.rs  transaction_ops.rs
xtrieve-engine/src/storage/: btree.rs  fcr.rs  files.rs  key.rs  mod.rs  page.rs  record.rs
xtrieved/: Cargo.toml  build.rs
xtrieved/src/: main.rs  server.rs
